--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -2105,53 +2105,57 @@ new PreLoad(tasks, {onload: loading});
 
 
         var floatDom = document.querySelectorAll('.mc');
-        var floatMask = document.querySelectorAll('.float-mask');
-        var floatTimeOut;
-        for (var i = 0; i < floatDom.length; i++) {
-            if (floatDom[i].hasAttribute('data-detail')) {
-                var t = floatDom[i].getAttribute('data-detail');
-                floatDom[i].addEventListener(evs.touchdown, function (ev) {
-                    var t1 = this.getAttribute('data-detail');
-                    var tDom = this.parentNode.querySelector('.float-mask .mc-wrap');
-                    var that = this;
-                    var fromDetailPage = (/\d+/).exec(t1)[0];
+                var floatMask = document.querySelectorAll('.float-mask');
+                var floatTimeOut;
+                for (var i = 0; i < floatDom.length; i++) {
+                    if (floatDom[i].hasAttribute('data-detail')) {
+                        var t = floatDom[i].getAttribute('data-detail');
+                        floatDom[i].addEventListener(evs.touchdown, function (ev) {
+                            var t1 = this.getAttribute('data-detail');
+                            var tDom = this.parentNode.querySelector('.float-mask .mc-wrap');
+                            var that = this;
+                            var fromDetailPage = (/\d+/).exec(t1)[0];
+var floatTimeout;
+                            var nPage = opaPage.querySelector('.current');
+                            var nDetailPage = parseInt(nPage.getAttribute('data-index'));
+                            if(floatTimeout){
+                                clearTimeout(floatTimeout);
+                            }
+                            floatTimeout = setTimeout(function(){if (nDetailPage == fromDetailPage - 1) {
+                                                            App.Utils.removeClass(opaPage, 'float-show-hide');
+                                                            App.Utils.addClass(opaPage, 'float-show');
+                                                            App.Utils.addClass(that.parentNode.querySelector('.float-mask'), 'mi-zoomIn');
+                                                        }},200);
 
-                        var nPage = opaPage.querySelector('.current');
-                    var nDetailPage = parseInt(nPage.getAttribute('data-index'));
-                        console.log('111',nDetailPage,fromDetailPage)
-                        if(nDetailPage == fromDetailPage -1){
-                            App.Utils.removeClass(opaPage, 'float-show-hide');
-                                                    App.Utils.addClass(opaPage, 'float-show');
-                                                    App.Utils.addClass(that.parentNode.querySelector('.float-mask'), 'mi-zoomIn');
-                        }
 
-                    if(t1.indexOf('1-') > -1){}
-                    else if(t1.indexOf('2-') > -1){
-                        tDom.innerHTML = '<img src="../images/detail/detail2-' + this.getAttribute('data-detail').split('2-')[1] + '.jpg">';
-                    }
-                    else if(t1.indexOf('3-') > -1){
-                        tDom.innerHTML = '<img src="../images/detail/detail3-' + this.getAttribute('data-detail').split('3-')[1] + '.jpg">';
-                    }
-                    else if(t1.indexOf('4-') > -1){                        
-                        tDom.innerHTML = '<img src="../images/detail/detail4-' + this.getAttribute('data-detail').split('4-')[1] + '.jpg">';
-                    }
-                    else if(t1.indexOf('5-') > -1){
-                        
-                    }
-                    return false;
-                }, false);
+                            if (t1.indexOf('1-') > -1) {
+                            }
+                            else if (t1.indexOf('2-') > -1) {
+                                tDom.innerHTML = '<img src="../images/detail/detail2-' + this.getAttribute('data-detail').split('2-')[1] + '.jpg">';
+                            }
+                            else if (t1.indexOf('3-') > -1) {
+                                tDom.innerHTML = '<img src="../images/detail/detail3-' + this.getAttribute('data-detail').split('3-')[1] + '.jpg">';
+                            }
+                            else if (t1.indexOf('4-') > -1) {
+                                tDom.innerHTML = '<img src="../images/detail/detail4-' + this.getAttribute('data-detail').split('4-')[1] + '.jpg">';
+                            }
+                            else if (t1.indexOf('5-') > -1) {
 
-            }
-        }
-        for (var i = 0; i < floatMask.length; i++) {
-            floatMask[i].addEventListener(evs.touchup, function (ev) {
-                App.Utils.removeClass(opaPage, 'float-show');
-                 App.Utils.addClass(opaPage, 'float-show-hide');
-                App.Utils.removeClass(this, 'mi-zoomIn');
-                return false;
-            }, false);
-        }
-    };
+                            }
+                            return false;
+                        }, false);
+
+                    }
+                }
+                for (var i = 0; i < floatMask.length; i++) {
+                    floatMask[i].addEventListener(evs.touchup, function (ev) {
+                        App.Utils.removeClass(opaPage, 'float-show');
+                         App.Utils.addClass(opaPage, 'float-show-hide');
+                        App.Utils.removeClass(this, 'mi-zoomIn');
+                        return false;
+                    }, false);
+                }
+            };
 
     var evt = "onorientationchange" in window ? "orientationchange" : "resize",
         ort = document.querySelector("#J_Orientation");
