--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1317,31 +1317,27 @@ a {
   .u-guideTop{background: url(../images/arrow_icon.png) 0 -31px;width: 76px;height: 31px;background-size: 76px auto;}
   .arrow-first{background: url(../images/arrow_icon.png) 0 0;}
   .arrow-hide{display: none;}
-/* p2-wifi */
-/*.float-mask{width: 100%;height: 100%;overflow: hidden;background-color: rgba(0,0,0,.5);display: none;font-size: 8rem;text-align: center;color: #fff;position:absolute;top:0;left:0;}
-    .float-show{z-index:1000;}
-.float-show .current .float-mask{display: block;z-index:100;opacity: 1!important;}
-.float-show-hide .current .float-mask{-webkit-animation-name: zoomToBig; animation-name: zoomToBig; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out;z-index: 100;}*/
 .float-mask{z-index: -1;}
 .float-show{z-index:1000;}
 .float-show .current .float-mask .mc-wrap{-webkit-animation-name: float-s-ani; animation-name: float-s-ani; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out;}
-    .float-show-hide .float-mask,.float-show .current .float-mask{z-index:20;opacity:1;}
+    .float-show-hide .float-mask{z-index:20;}
+    .float-show .current .float-mask{z-index:20;opacity:1;}
     @-webkit-keyframes float-s-ani {
       0%{opacity:0;transform:scale(0.3);}
-      100%{opacity:1;top:0;left:0;}
+      100%{opacity:1;}
     }
     @keyframes float-s-ani {
         0%{opacity:0;transform:scale(0.3);}
-              100%{opacity:1;top:0;left:0;}
+              100%{opacity:1;}
     }
-.float-show-hide .float-mask .mc-wrap{-webkit-animation-name: float-hide; animation-name: float-hide; -webkit-animation-timing-function: linear; animation-timing-function: linear;}
+.float-show-hide .float-mask .mc-wrap{-webkit-animation-name: float-hide; animation-name: float-hide; -webkit-animation-timing-function: linear; animation-timing-function: linear;-webkit-animation-fill-mode: forwards;animation-fill-mode: forwards;}
 @-webkit-keyframes float-hide {
-    0%{opacity:1;top:0;left:0;}
-          100%{opacity:0;transform:scale(0.3);}
+    0%{opacity:1;}
+          100%{opacity:0;transform:scale(0.1);}
 }
 @keyframes float-hide {
-    0%{opacity:1;top:0;left:0;}
-              100%{opacity:0;transform:scale(0.3);}
+    0%{opacity:1;}
+              100%{opacity:0;transform:scale(0.1);}
 }
 </style>
 </head>
@@ -2119,7 +2115,7 @@ var floatTimeout;
                         App.Utils.removeClass(opaPage, 'float-show');
                          App.Utils.addClass(opaPage, 'float-show-hide');
                         setTimeout(function(){
-                            App.Utils.removeClass(opaPage, 'float-show-hide');
+                            opaPage.querySelector('.float-mask').style='display:none';
                         },400);
                         //App.Utils.removeClass(this, 'mi-zoomIn');
                         return false;
