--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1317,7 +1317,7 @@ a {
   .u-guideTop{background: url(../images/arrow_icon.png) 0 -31px;width: 76px;height: 31px;background-size: 76px auto;}
   .arrow-first{background: url(../images/arrow_icon.png) 0 0;}
   .arrow-hide{display: none;}
-.float-mask{z-index: -1;}
+.float-mask{z-index: -1;background:rgba(0,0,0,.5);width:100%;height:100%;}
 .float-show{z-index:1000;}
 .float-show .current .float-mask .mc-wrap{-webkit-animation-name: float-s-ani; animation-name: float-s-ani; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out;}
     .float-show-hide .float-mask{z-index:20;}
@@ -1394,7 +1394,7 @@ a {
                                 <div class="img-wrap"><div class="img-1-about title"></div></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_0s duration_0_4s  float-mask"><div class="mc-wrap delay_0_0s duration_0_4s noAnimate"><img src="../images/detail/detail1-1.png"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_4s  float-mask"><div class="mc-wrap delay_0_0s duration_0_4s"><img src="../images/detail/detail1-1.png"></div></div>
         </div>
     </div>
     <div class="J_opaPannel pannels scene-2" data-index="1">
@@ -1481,7 +1481,7 @@ a {
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_0s duration_0_4s float-mask"><div class="mc-wrap delay_0_0s duration_0_4s noAnimate"><img src="../images/detail/detail2-1.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_4s float-mask"><div class="mc-wrap delay_0_0s duration_0_4s"><img src="../images/detail/detail2-1.jpg"></div></div>
         </div>
     </div>
 <div class="J_opaPannel pannels scene-3" data-index="2">
@@ -1613,7 +1613,7 @@ a {
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_0s duration_0_4s float-mask"><div class="mc-wrap delay_0_0s duration_0_4s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_4s float-mask"><div class="mc-wrap delay_0_0s duration_0_4s"><img src="../images/detail/detail2-2.jpg"></div></div>
         </div>
     </div>
 <!-- S scene4 -->
@@ -1745,7 +1745,7 @@ a {
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_0s duration_0_4s float-mask"><div class="mc-wrap delay_0_0s duration_0_4s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_4s float-mask"><div class="mc-wrap delay_0_0s duration_0_4s"><img src="../images/detail/detail2-2.jpg"></div></div>
         </div>
     </div>
 <!-- E scene4 -->
@@ -1782,7 +1782,7 @@ a {
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_0s duration_0_4s float-mask"><div class="mc-wrap delay_0_0s duration_0_4s noAnimate"><img src="../images/detail/detail5-1.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_4s float-mask"><div class="mc-wrap delay_0_0s duration_0_4s"><img src="../images/detail/detail5-1.jpg"></div></div>
         </div>
     </div>
 <!-- E scene5 -->
