--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1875,7 +1875,18 @@ a {
       "../images/cir/cir_purple.png",
       "../images/cir/cir_purpleblue.png",
       "../images/cir/cir_yellow_50.png",
-      "../images/cir/cir_yellow_litter.png"
+      "../images/cir/cir_yellow_litter.png",
+        "../images/detail/detail2-1.jpg",
+                    "../images/detail/detail2-2.jpg",
+                    "../images/detail/detail2-3.jpg",
+                    "../images/detail/detail2-4.jpg",
+                    "../images/detail/detail3-1.jpg",
+                            "../images/detail/detail3-2.jpg",
+                            "../images/detail/detail3-3.jpg",
+                            "../images/detail/detail3-4.jpg",
+                    "../images/detail/detail3-5.jpg",
+                            "../images/detail/detail3-6.jpg",
+                            "../images/detail/detail3-7.jpg"
     ];
     var tasks1 = [
             "../images/detail/detail2-1.jpg",
@@ -1909,10 +1920,9 @@ a {
     function complete() {
       loadOk();
     }
-new PreLoad(tasks, {onload: loading});
-    new PreLoad(tasks1, {onload: loading1});
     function loading1(load) {
-        }
+            }
+new PreLoad(tasks, {onload: loading});
 
     var loader = document.getElementById("J_MiLoading"),
         body = document.documentElement || document.body,
