--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1342,7 +1342,7 @@ a {
               100%{opacity:0;transform:scale(0.3);-webkit-transform:scale(.3)}
 }
 /* sec */
-.mc-wrap-back{position: absolute;bottom:148px;left: 233px;display: none;background-position:-160px -320px;width:273px;height:83px;}
+.mc-wrap-back{position: absolute;left: 510px;top:52px;display: none;background-position:-160px -320px;width:273px;height:83px;transform:scale(0.6);-webkit-transform:scale(0.6)}
 .float-show .mc-wrap-back{z-index: 31;display: block;}
 .mc-wrap-detail{width: 100%;height: 100%;}
 .secene-sec{position: absolute;top:0;left: 0;height: 100%;width: 100%;overflow: hidden;-webkit-transform-style: preserve-3d;transform-style: preserve-3d;-webkit-backface-visibility: hidden;backface-visibility: hidden;opacity: 0;/*background-color: #fff;*/}
