--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1342,8 +1342,8 @@ a {
               100%{opacity:0;transform:scale(0.3);-webkit-transform:scale(.3)}
 }
 /* sec */
-.mc-wrap-back{position: absolute;left: 510px;top:52px;display: none;background-position:-160px -320px;width:273px;height:83px;transform:scale(0.6);-webkit-transform:scale(0.6)}
-.float-show .mc-wrap-back{z-index: 31;display: block;}
+.pannels .mc-wrap-back{position: absolute;left: 510px;top:52px;background-position:-160px -320px;width:273px;height:83px;transform:scale(0.6);-webkit-transform:scale(0.6);opacity:0;transition:opacity .5s .2s;}
+.float-show .mc-wrap-back{opacity:1;}
 .mc-wrap-detail{width: 100%;height: 100%;}
 .secene-sec{position: absolute;top:0;left: 0;height: 100%;width: 100%;overflow: hidden;-webkit-transform-style: preserve-3d;transform-style: preserve-3d;-webkit-backface-visibility: hidden;backface-visibility: hidden;opacity: 0;/*background-color: #fff;*/}
 .secene-sec-current{opacity: 1;z-index: 20;}
@@ -1943,14 +1943,7 @@ a {
         "../images/detail/detail2-1.jpg",
                     "../images/detail/detail2-2.jpg",
                     "../images/detail/detail2-3.jpg",
-                    "../images/detail/detail2-4.jpg",
-                    "../images/detail/detail3-1.jpg",
-                            "../images/detail/detail3-2.jpg",
-                            "../images/detail/detail3-3.jpg",
-                            "../images/detail/detail3-4.jpg",
-                    "../images/detail/detail3-5.jpg",
-                            "../images/detail/detail3-6.jpg",
-                            "../images/detail/detail3-7.jpg"
+                    "../images/detail/detail2-4.jpg"
     ];
     var tasks1 = [
             "../images/detail/detail2-1.jpg",
@@ -2163,17 +2156,22 @@ new PreLoad(tasks, {onload: loading});
                             var floatTimeout;
                             var nPage = opaPage.querySelector('.current');
                             var nDetailPage = parseInt(nPage.getAttribute('data-index'));
-                            for(var i = 0;i<detailDom.length;i++){
-                                App.Utils.removeClass(detailDom[i],'secene-sec-current');
-                                detailDom[i].setAttribute('style','');
+                            if(floatTimeout){
+                                clearTimeout(floatTimeout)
                             }
-                            opaPage.querySelector('.current .float-mask').style.zIndex = 20;
-                            App.Utils.addClass(opaPage, 'float-show');
-                            App.Utils.addClass(opaPage.querySelector('.current .float-mask .mc-wrap-detail'), 'float-wrap-show');
-                            App.Utils.addClass(detailDom[inDetailPage],'secene-sec-current');
-                            if(fromDetailPage == '1' || fromDetailPage == '4' || fromDetailPage == '5' || fromDetailPage == '2' && inDetailPage == '4' || fromDetailPage == '3' && inDetailPage == '6'){
-                                gTop.style.zIndex = -1;
-                            }
+                            floatTimeout = setTimeout(function () {
+                                for (var i = 0; i < detailDom.length; i++) {
+                                    App.Utils.removeClass(detailDom[i], 'secene-sec-current');
+                                    detailDom[i].setAttribute('style', '');
+                                }
+                                opaPage.querySelector('.current .float-mask').style.zIndex = 20;
+                                App.Utils.addClass(opaPage, 'float-show');
+                                App.Utils.addClass(opaPage.querySelector('.current .float-mask .mc-wrap-detail'), 'float-wrap-show');
+                                App.Utils.addClass(detailDom[inDetailPage], 'secene-sec-current');
+                                if (fromDetailPage == '1' || fromDetailPage == '4' || fromDetailPage == '5' || fromDetailPage == '2' && inDetailPage == '4' || fromDetailPage == '3' && inDetailPage == '6') {
+                                    gTop.style.zIndex = -1;
+                                }
+                            },300);
                         }, !1);
 
                     }
